--- a/Resources/FMWebSocket/public/index.html
+++ b/Resources/FMWebSocket/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>FMETP STREAM: FM WebSocket 2.0</title>
+    <title>Soccer YellowDot</title>
     <script src="lib/gunzip.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -142,9 +142,9 @@
       </tr>
     </table>
 
-    <!-- Region End: You may commented and remove below script, if you don't need any Demo UI buttons, input Text or any info -->
+    <center>    <span style="color: white">Yellow Dot Soccer Demo (1 Player Session Limit)</span></center>
 
-    <!-- The important part of displaying streaming result -->
+
     <img id="DisplayImg" src="" width=100%  />
 
 
