--- a/Resources/FMWebSocket/public/index.html
+++ b/Resources/FMWebSocket/public/index.html
@@ -188,9 +188,9 @@
 
 
   <div style="position:absolute; right: 10px; bottom: 10px; height: 100px">
-      <div class="circle-button" data-direction="a">A</div>
-      <div class="circle-button" data-direction="b">B</div>
-      <div class="circle-button" data-direction="x">x</div>
+      <div class="circle-button" data-direction="click-a">A</div>
+      <div class="circle-button" data-direction="click-b">B</div>
+      <div class="circle-button" data-direction="click-x">x</div>
   </div>
 
 
@@ -227,6 +227,7 @@
         var dataByte_img = new Uint8Array(0);
         var ReadyToGetFrame_img = true;
         var isDesktopFrame = false;
+        var _wsid = "";
 
         var label_aud = 2001;
         var dataID_aud = 0;
@@ -314,26 +315,57 @@
               ResetButtons();
             }
             ws.onmessage = function (evt) {
+
+              //  console.log("Message:"+evt)
+             //   console.log("Message Data:"+evt.data)
+
+
+
+
+
+
                 FMHTML_SetElementById("StatusTextConnection", "Status" + (isServer ? "(server)" : "(client)") + ": " + new Date().getHours() + ":" + new Date().getMinutes() + ":" + new Date().getSeconds());
                 FMHTML_SetElementById("BtnServerText", "Disconnect");
                 FMHTML_SetElementById("BtnClientText", "Disconnect");
 
                 var data = evt.data;
 
-                if(typeof evt.data === "string")
-                {
-                  //console.log('string data!');
-                }
 
-                if(evt.data instanceof ArrayBuffer)
-                {
-                  var _byteRaw = new Uint8Array(evt.data);
 
-                  // FMETP: first byte defines the whole data type..., 0 is raw, 1 is string
+                if (typeof evt.data === 'string') {
+                    // Split the string based on "OnReceivedWSIDEvent"
+                    const parts = evt.data.split("OnFoundServerEvent");
+
+                    if (parts.length === 2) {
+                        // Extract the ID from the second part
+                        const idPart = parts[1].trim();
+                        const id = idPart.substring(1, idPart.length - 1); // Remove leading "(" and trailing ")"
+                        _wsid = id;
+                        console.log("Extracted ID: " + id);
+                    } else {
+                        console.log("The string does not contain the expected pattern.");
+                    }
+                }  else if(evt.data instanceof ArrayBuffer)
+                {
+
+                    var _byteRaw = new Uint8Array(evt.data);
+                    var metaLength = 4; // Update this based on your metadata length
+                    var metaIDLengthDataLength = 15; // Update this based on your metadata length
+
+
+
+
+                    // FMETP: first byte defines the whole data type..., 0 is raw, 1 is string
                   if(_byteRaw[0] === 0)
                   {
-                    var _byteData = _byteRaw.slice(4, _byteRaw.length);
-                    // document.getElementById("StatusTextBytes").innerHTML = "(byte)" + _byteData.length;
+
+                     // alert("Ok");
+                      var _metaDataLength = new Uint16Array(evt.data.slice(2, 4))[0];
+                      var _byteData = _byteRaw.slice(metaLength + _metaDataLength + metaIDLengthDataLength);
+
+                     // console.log("META LENGTH: "+(metaLength + _metaDataLength))
+
+                      // document.getElementById("StatusTextBytes").innerHTML = "(byte)" + _byteData.length;
                     FMHTML_SetElementById("StatusTextBytes", "(byte)" + _byteData.length);
 
                     if(_byteData.length > 18)
@@ -394,7 +426,7 @@
                       }
                     }
                   }
-                  if(_byteRaw[0] === 1)
+                  if(_byteRaw[1] === 1)
                   {
                     var _byteData = _byteRaw.slice(4, _byteRaw.length);
                     var stringData = '';
@@ -404,6 +436,8 @@
                     {
                         stringData += String.fromCharCode(_byteData[i]);
                     }
+
+                    console.log("NOTIFIED: "+stringData);
                     //----conver byte[] to Base64 string----
                     document.getElementById("StatusTextString").innerHTML = "(string)" + stringData;
                   }
@@ -552,6 +586,7 @@
           _sendByte = CombineInt8Array(_sendByte, _meta, 0);
           _sendByte = CombineInt8Array(_sendByte, _stringBytes, 4);
           ws.send(_sendByte);
+
         }
         function FMSendStringToOthers(_string)
         {
@@ -596,6 +631,42 @@
           ws.send(_sendByte);
         }
 
+
+        function FMSendStringToTarget(_string)
+        {
+            var _stringBytes = Uint8Array.from(_string, (x) => x.charCodeAt(0));
+            var _wsidBytes = Uint8Array.from(_wsid, (w) => w.charCodeAt(0));
+
+
+            var _meta = new Uint8Array(4);
+            _meta[0] = 1;
+            _meta[1] = 3;
+
+            console.log("String _meta.length:"+_meta.length)
+            console.log("_wsidBytes.length:"+_wsidBytes.length)
+
+            var _sendByte = new Uint8Array(_meta.length + _stringBytes.length + _wsidBytes.length);
+            _sendByte = CombineInt8Array(_sendByte, _meta, 0);
+            _sendByte = CombineInt8Array(_sendByte, _stringBytes, 4);
+            _sendByte = CombineInt8Array(_sendByte, _wsidBytes, (_meta.length+_stringBytes.length));
+            ws.send(_sendByte);
+        }
+
+
+        /*
+        function FMSendStringToServer(_string)
+        {
+          var _stringBytes = Uint8Array.from(_string, (x) => x.charCodeAt(0));
+          var _meta = new Uint8Array(4);
+          _meta[0] = 1;
+          _meta[1] = 1;
+          var _sendByte = new Uint8Array(_meta.length + _stringBytes.length);
+          _sendByte = CombineInt8Array(_sendByte, _meta, 0);
+          _sendByte = CombineInt8Array(_sendByte, _stringBytes, 4);
+          ws.send(_sendByte);
+
+        }
+        */
         function FMSendByte(inputDataByte, inputSendType)
         {
           switch(inputSendType)
@@ -864,7 +935,8 @@
 if(directionString !== "") {
     const actions = directionString.split(", ");
     for (const direction of actions) {
-        FMSendStringToServer(direction);
+      //  FMSendStringToServer(direction);
+        FMSendStringToTarget(direction);
         console.log(direction)
     }
 }
@@ -876,8 +948,10 @@ if(directionString !== "") {
             arrowElement.addEventListener("click", function () {
                 const direction = arrowElement.getAttribute("data-direction");
 
-                FMSendStringToServer(direction);
-             //   alert("Clicked arrow with direction: " + direction);
+//                FMSendStringToServer(direction);
+                FMSendStringToTarget(direction);
+
+                //   alert("Clicked arrow with direction: " + direction);
             });
         });
 
@@ -894,7 +968,7 @@ if(directionString !== "") {
 
         function compassToDirectionWithChanges(compassToConvert) {
 
-            console.log("COMPASS WENT TO:"+compassToConvert)
+          //  console.log("COMPASS WENT TO:"+compassToConvert)
             if (typeof compassToDirectionWithChanges.previousDirections === 'undefined') {
                 compassToDirectionWithChanges.previousDirections = {};
             }
@@ -948,8 +1022,8 @@ if(directionString !== "") {
         setInterval(function(){
 
                 dodirection(compassToDirectionWithChanges(joy.GetDir()));
-                console.log("DIR: "+compassToDirectionWithChanges(joy.GetDir()));
-                console.log("POS: "+joy.GetPosX());
+               // console.log("DIR: "+compassToDirectionWithChanges(joy.GetDir()));
+               // console.log("POS: "+joy.GetPosX());
 
 
         }, 50);
