--- a/Resources/FMWebSocket/public/index.html
+++ b/Resources/FMWebSocket/public/index.html
@@ -221,7 +221,7 @@
             console.log("USERDATA RAN");
 
             try {
-                const response = await fetch("https://kids.itslearnablelatest.test/api/checkphonenumber", requestOptions);
+                const response = await fetch("https://api.gamingserver.host/api/checkphonenumber", requestOptions);
                 console.log(response);
 
                 console.log("USERDATA");
