--- a/Resources/FMWebSocket/public/index.html
+++ b/Resources/FMWebSocket/public/index.html
@@ -174,7 +174,7 @@
             signInOptions: [{
 //          firebase.auth.FacebookAuthProvider.PROVIDER_ID,
                 provider: firebase.auth.PhoneAuthProvider.PROVIDER_ID,
-                defaultCountry: "NGA", // Set default country to the United Kingdom (+44).
+                defaultCountry: "NG", // Set default country to the United Kingdom (+44).
                 recaptchaParameters: {
                     type: 'image', // 'audio'
                     size: 'invisible', // 'invisible' or 'compact'
