--- a/Resources/FMWebSocket/public/index.html
+++ b/Resources/FMWebSocket/public/index.html
@@ -184,7 +184,7 @@
             }
             ]
         };
-
+/*
 
         var isSubscribed = false;
 
@@ -292,7 +292,7 @@ alert("You are not subscribed.")
             return false;
         }
 
-
+*/
 
 
 
@@ -382,7 +382,7 @@ alert("You are not subscribed.")
 
 </div>
 
-      <div id="firebaseui-auth-container" style="margin-top: 50px"></div>
+<!--      <div id="firebaseui-auth-container" style="margin-top: 50px"></div>-->
       <div id="loader">Loading...</div>
 
 
